--- a/Fly/src/app/app.component.html
+++ b/Fly/src/app/app.component.html
@@ -1,9 +1,16 @@
- <!-- <router-outlet></router-outlet>  -->
+ 
 <!-- <app-signup></app-signup> -->
  
 <!-- <app-signin></app-signin> -->
 <app-header></app-header>
-<img style="width:100%" src="/src/assets/images/6956546bd6d5c6f.jpg">
-<app-search></app-search> 
-<app-flightdetails></app-flightdetails>  
-<app-footer></app-footer>
+<!-- <router-outlet></router-outlet> -->
+
+<!-- <img style="width:100%" src="/src\assets\images\6956546bd6d5c6f.jpg"> -->
+<!-- <app-search></app-search>  -->
+
+<!-- <app-flightdetails></app-flightdetails>   -->
+
+<!-- <app-help></app-help> -->
+<!-- <app-footer></app-footer> -->
+<!-- <app-filter></app-filter> -->
+ 
