--- a/Fly/src/app/header/footer/footer.component.html
+++ b/Fly/src/app/header/footer/footer.component.html
@@ -1,4 +1,5 @@
-<footer class="footer">
+<div class="footer">
+<footer>
 <section id="lab_social_icon_footer">
   <!-- Include Font Awesome Stylesheet in Header -->
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -15,3 +16,4 @@
   </div>
 </section>
 </footer>
+</div>
