--- a/Fly/src/app/header/header.component.html
+++ b/Fly/src/app/header/header.component.html
@@ -2,11 +2,15 @@
   <mat-toolbar-row>
     
      <span>FlySky</span>
-     <!-- <img src="C:\Users\lenovo\Desktop\Fly\src\assets\images\logo.jpg" alt="FlySky" /> -->
+     <!-- <img src="/src\assets\images\logo.jpg" alt="FlySky" /> -->
      <span class="welcome">welcome:{{username}}</span>
      <span class="spacer"></span>
-     <a  class="signin" mat-button  routerLink="/Signin">Singin</a>
+     <a  mat-button  routerLink="/search">Book Tickts</a>
+     <a  mat-button  routerLink="/About">About Us</a>
+     <a  mat-button  routerLink="/Help">Help</a>
+     <a  mat-button  routerLink="/Signin">Singin</a>
      <a  mat-button  routerLink="/Signup">Signup</a>
+     <a  mat-button  routerLink="/Signin">Logout</a>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
