--- a/Fly/src/app/flightdetails/flightdetails.component.css
+++ b/Fly/src/app/flightdetails/flightdetails.component.css
@@ -2,11 +2,15 @@
     display: flex;
     flex-direction: column;
     min-width: 300px;
+    
   }
   
   .mat-table {
     overflow: auto;
     max-height: 500px;
+    background-image: url('C:\Users\lenovo\Desktop\Fly\src\assets\images\flight.jpg');
+    background-repeat: no-repeat;
+
   }
   
   .mat-header-cell.mat-sort-header-sorted {
@@ -36,3 +40,5 @@
   overflow: auto;
   max-height: 500px;
 }
+
+
