--- a/Fly/src/app/flightdetails/flightdetails.component.html
+++ b/Fly/src/app/flightdetails/flightdetails.component.html
@@ -45,9 +45,14 @@
     </mat-form-field>
   </div> -->
 
+  
 
+
+<app-search></app-search>
+<app-filter></app-filter>
+<h2>Onward Journey</h2>
 <div class="example-container mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" class="table">
     <!-- Position Column -->
     <ng-container matColumnDef="name">
      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
@@ -67,7 +72,11 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration </th>
       <td mat-cell *matCellDef="let flight">{{flight.duration}} </td>
     </ng-container>
-
+    <ng-container matColumnDef="class">
+      
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Class </th>
+        <td mat-cell *matCellDef="let flight">{{flight.class}} </td>
+      </ng-container>
     <!-- Symbol Column -->
     <ng-container matColumnDef="arrivalTime">
       
@@ -80,6 +89,66 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
       <td mat-cell *matCellDef="let flight">{{flight.price}}  </td>
     </ng-container>
+
+    <ng-container matColumnDef="actions">
+      
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Bookings</th>
+      <td mat-cell *matCellDef="let flight"><button mat-raised-button color="primary">Book Now</button>  </td>
+    </ng-container>
+    
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
+
+
+<div class="example-container mat-elevation-z8" *ngIf="returnDataSource.data.length>0">
+    <h2 >Return Journey</h2>
+    <table mat-table [dataSource]="returnDataSource" matSort class="mat-elevation-z8" class="table">
+    <!-- Position Column -->
+    <ng-container matColumnDef="name">
+     <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let flight">{{flight.name}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="departureTime">
+      
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Departure Time </th>
+      <td mat-cell *matCellDef="let flight">{{flight.departureTime}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="duration">
+      
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration </th>
+      <td mat-cell *matCellDef="let flight">{{flight.duration}} </td>
+    </ng-container>
+    <ng-container matColumnDef="class">
+      
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Class </th>
+        <td mat-cell *matCellDef="let flight">{{flight.class}} </td>
+      </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="arrivalTime">
+      
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Arrival Time </th>
+      <td mat-cell *matCellDef="let flight">{{flight.arrivalTime}}  </td>
+    </ng-container>
+
+    <ng-container matColumnDef="price">
+      
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+      <td mat-cell *matCellDef="let flight">{{flight.price}}  </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Bookings</th>
+      <td mat-cell *matCellDef="let flight"><button mat-raised-button color="primary" [routerLink]="['/flightdetails',flights.id]">Book Now</button>  </td>
+    </ng-container>
+    
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
