--- a/Fly/src/app/header/footer/footer.component.css
+++ b/Fly/src/app/header/footer/footer.component.css
@@ -1,6 +1,7 @@
 #lab_social_icon_footer {
     padding: 40px 0;
-    background-color:#3f51b5;
+    background-color:#7c4ecc;
+    
   }
   
   #lab_social_icon_footer a {
@@ -51,6 +52,8 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    
-   
+    height: 60px;
+}
+.footer {
+  height: 60px;
 }
