--- a/Fly/src/app/app.component.html
+++ b/Fly/src/app/app.component.html
@@ -11,6 +11,6 @@
 <!-- <app-flightdetails></app-flightdetails>   -->
 
 <!-- <app-help></app-help> -->
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
 <!-- <app-filter></app-filter> -->
  
