--- a/Fly/src/app/filter/filter.component.css
+++ b/Fly/src/app/filter/filter.component.css
@@ -1,4 +1,4 @@
-.mat-slider {
+/* .mat-slider {
     width: 200px;
   }
   .vertical{
@@ -6,5 +6,8 @@
     border-right-width: 1px;
     border-right-style: solid;
     height: 100%;
+  } */
+  .Price{
+    margin-top: 60px;
   }
- 
+  
