--- a/Fly/src/app/signup/search/search.component.css
+++ b/Fly/src/app/signup/search/search.component.css
@@ -5,7 +5,7 @@
 .tktForm{
     margin-top: 0px;
     
-    background-image: url('/src/assets/images/jeshoots-com-722888-unsplash.jpg');
+    background-image: url('C:\Users\lenovo\Desktop\Fly\src\assets\images\jeshoots-com-722888-unsplash.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 350px;
